--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,16 @@
 					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
+
+ 			 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>	
+
 		</plugins>
 	</build>
 
