--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+								<configuration>
+					
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
+				
+				</configuration>
 				 <executions>
 					<execution>
 						<goals>
