--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,15 @@
 			<artifactId>spring-context</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
+
+
 <!-- 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
